[package]
name = "password-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
diesel = { version = "2.1.3", features = ["postgres", "uuid"] }
dotenvy = "0.15.7"
log = "0.4.20"
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
